--- a/juego.html
+++ b/juego.html
@@ -3,45 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
     <title>Piedra, Papel o Tijeras</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style2.css">
   </head>
 <body>
   <header>
     <section class="contadores">
-    <p id="contadorUsuario">0</p> <p>Contador Usuario</p>
-    <p id="contadorMaquina">0</p> <p>Contador Maquina</p>
-    <!--<input type="text" id="input"> Score Usuario: <span id="result"></span>-->
-    <!--<input type="text" id="input2"> Score Maquina: <span id="result2"></span>-->
-    </section>
-		<h1>Piedra, Papel o Tijeras</h1>
+      <div class="contadorMaquina">
+      <p>Computer</p><p id="contadorMaquina">0</p> 
+      </div>
+      <div class="contadorUsuario">
+      <p>Jugador</p><p id="contadorUsuario">0</p> 
+      </div>
+     </section>
     </header>
     <main>
       <article>
-        <button popovertarget="mensaje" popovertargetaction="toggle">Reglas del juego</button>
-        <div id="mensaje" popover="manual">
-          <ul>
-            <li>La piedra aplasta la tijera. (Gana la piedra.)</li>
-            <li>La tijera corta el papel. (Gana la tijera.)</li>
-            <li>El papel envuelve la piedra. (Gana el papel.)</li>
-            <li>En caso de empate, se juega otra vez  hasta que uno de los jugadores gana con tres puntos.</li>
-            <button popovertarget="mensaje" popovertargetaction="hide">Volver</button>
-          </ul>
-        </div>
-      </article>
-    <div class="manos">
-      <img src="./img/piedraIz.png" class="img1" alt="imagen-seleccion" width="400" height="400" >
+       <div class="manos">
+      <img src="./img/piedraIz.png" class="img1" alt="imagen-seleccion" width="400px" height="300px" >
         <div class="iniciar">
-          <button id="play">PLAY</button> 
-          <p id="tiempo"></p>
+          <p id="tiempo" class="tiempo"></p>
         </div>
-      <img src="./img/tijerasDr.png" class="img2" alt="imagen-seleccion2" width="400" height="400" >
+      <img src="./img/tijerasDr.png" class="img2" alt="imagen-seleccion2" width="400px" height="300px" >
     </div>
+  </article>
+  <section id="seleccionesUser" class="seleccionesUser">
+    <button id="0" value="0" class="botoncitos piedra">Piedra</button>
+    <button id="1" value="1" class="botoncitos papel">Papel</button>
+    <button id="2" value="2" class="botoncitos tijeras">Tijeras</button>
+  </section>
     </main>	
-    <footer id="seleccionesUser" class="seleccion-figura">
-      <button id="0" value="0" class="piedra">Piedra</button>
-      <button id="1" value="1" class="papel">Papel</button>
-      <button id="2" value="2" class="tijeras">Tijeras</button>
+    <footer >
+      <section class="config">
+        <button class="botoncitos cerrar">X</button>
+        <a href="#" class="botoncitos sonido"><img src="/img/ico/sound.svg" alt="sonido" class="iconos"></a>
+      </section>
     </footer>
     <script src="src/script.js" type="module" ></script>
     <script src="src/events.js" type="module"></script>
