--- a/main-page/index.html
+++ b/main-page/index.html
@@ -9,22 +9,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="bg">
-    <div class="controls">
+    <!-- header -->
+    <header class="controls">
         <a href=""><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
         <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
-    </div>
-    <section class="logo">
+    </header>
+    <!-- main -->
+    <main class="logo">
         <img src="./Images/PPT ELEMENTOS-02.png" alt="">
-    </section>
-    <section class="input-button">
-        <form action="">
-            <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
-        </form>
-        <div class="play-father">
-            <button onclick="location.href='juego.html'" class="play">PLAY</button>
+    </main>
+    <!-- footer -->
+    <footer>
+        <div class="info">
+            <a href=""><span id="icon"><svg clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12.002 2.005c5.518 0 9.998 4.48 9.998 9.997 0 5.518-4.48 9.998-9.998 9.998-5.517 0-9.997-4.48-9.997-9.998 0-5.517 4.48-9.997 9.997-9.997zm0 1.5c-4.69 0-8.497 3.807-8.497 8.497s3.807 8.498 8.497 8.498 8.498-3.808 8.498-8.498-3.808-8.497-8.498-8.497zm0 6.5c-.414 0-.75.336-.75.75v5.5c0 .414.336.75.75.75s.75-.336.75-.75v-5.5c0-.414-.336-.75-.75-.75zm-.002-3c.552 0 1 .448 1 1s-.448 1-1 1-1-.448-1-1 .448-1 1-1z" fill-rule="nonzero"/></svg></span></a>
         </div>
-    </section>
+        <section class="input-button">
+            <form action="">
+                <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
+            </form>
+                <div class="play-father">
+                    <button onclick="location.href='juego.html'" class="play">PLAY</button>
+            </div>
+        </section>
+    </footer>
+
 </body>
 </html>
+
+<!--
+    botón de off volumen
+     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22 1.269l-18.455 22.731-1.545-1.269 3.841-4.731h-1.827v-10h4.986v6.091l2.014-2.463v-3.628l5.365-2.981 4.076-5.019 1.545 1.269zm-10.986 15.926v.805l8.986 5v-16.873l-8.986 11.068z"/></svg> -->
