--- a/main-page/index.html
+++ b/main-page/index.html
@@ -23,8 +23,8 @@
     </main>
     <!-- footer -->
     <footer>
-        <div class="info">
-            <button popovertarget="mensaje" popovertargetaction="toggle" class="botoncitos reglas"><img src="/img/ico/info.svg" alt="reglas" class="iconos"></button>
+        <div class="info ">
+            <button popovertarget="mensaje" popovertargetaction="toggle" class="information"><img src="./Images/info.svg" alt="reglas" id="icon" ></button>
         <div id="mensaje" popover="manual">
           <h1>REGLAS DEL JUEGO</h1>
           <ul>
@@ -32,7 +32,7 @@
             <li>La tijera corta el papel.</li>
             <li>El papel envuelve la piedra.</li>
             <li>En caso de empate, se juega otra vez.</li>
-            <button popovertarget="mensaje" popovertargetaction="hide" class="botoncitos cerrar cerrarppv">X</button>
+            <button popovertarget="mensaje" popovertargetaction="hide" class="cerrar cerrarppv">X</button>
           </ul>
         </div>
         </div>
@@ -48,7 +48,3 @@
 
 </body>
 </html>
-
-<!--
-    botón de off volumen
-     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22 1.269l-18.455 22.731-1.545-1.269 3.841-4.731h-1.827v-10h4.986v6.091l2.014-2.463v-3.628l5.365-2.981 4.076-5.019 1.545 1.269zm-10.986 15.926v.805l8.986 5v-16.873l-8.986 11.068z"/></svg> -->
