--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style_game.css">
+    <link rel="stylesheet" href="./style_game.css">
   </head>
 <body class="bg">
   <header>
@@ -24,11 +24,11 @@
     <main>
       <article>
        <div class="hands">
-      <img src="./img/PPT ELEMENTOS-piedra izq.png">
+      <img src="./game-page/img/PPT ELEMENTOS-piedra izq.png">
         <div class="start">
           <p id="time" class="time"></p>
         </div>
-      <img src="./img/PPT ELEMENTOS-piedra der.png" >
+      <img src="./game-page/img/PPT ELEMENTOS-piedra der.png" >
     </div>
   </article>
   <section id="selectUser" class="selectsUser">
