--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../main-page/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
@@ -19,12 +19,12 @@
     </header>
     <!-- main -->
     <main class="logo">
-        <img src="./Images/PPT ELEMENTOS-02.png" alt="">
+        <img src="./main-page/Images/PPT ELEMENTOS-02.png" alt="">
     </main>
     <!-- footer -->
     <footer>
         <div class="info ">
-            <button popovertarget="mensaje" popovertargetaction="toggle" class="information"><img src="./Images/info.svg" alt="reglas" id="icon" ></button>
+            <button popovertarget="mensaje" popovertargetaction="toggle" class="information"><img src="./main-page/Images/info.svg" alt="reglas" id="icon" ></button>
         <div id="mensaje" popover="manual">
           <h1>REGLAS DEL JUEGO</h1>
           <ul>
@@ -41,7 +41,7 @@
                 <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
             </form>
                 <div class="play-father">
-                    <button onclick="location.href='juego.html'" class="play">PLAY</button>
+                    <button onclick="location.href='game.html'" class="play">PLAY</button>
             </div>
         </section>
     </footer>
