style_game saas

--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
     </main>	
     <footer >
       <div class="controls">
-        <a href=""><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
         <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
     </div>
       </section>
