--- a/main-page/index.html
+++ b/main-page/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="app.js"></script>
 </head>
 <body class="bg">
     <!-- header -->
@@ -41,10 +42,9 @@
                 <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
             </form>
                 <div class="play-father">
-                    <button onclick="location.href='juego.html'" class="play">PLAY</button>
+                    <button  value="button" onclick="playAudio.play(); location.href='../game.html'" class="play">PLAY</button>
             </div>
         </section>
     </footer>
-
 </body>
 </html>
