he conseguido cerrar cuando le das a X. yasssssss

--- a/main-page/index.html
+++ b/main-page/index.html
@@ -15,7 +15,7 @@
 <body class="bg">
     <!-- header -->
     <header class="controls">
-        <a href=""><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href=""><span id="icon" onclick="closeGame()"><i class="fa-solid fa-xmark"></i></span></a>
         <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
     </header>
     <!-- main -->
