modificacion de los js con la funcion css y div en game

--- a/game.html
+++ b/game.html
@@ -48,7 +48,7 @@
         <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
         <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
       </div>
-      </section>
+      <div id="effect" style="display:none"></div>
     </footer>
       <script src="src/script.js" type="module" ></script>
       <script src="src/events.js" type="module"></script>
