--- a/main-page/index-main.html
+++ b/main-page/index-main.html
@@ -15,7 +15,7 @@
     <div id="sonido"></div>
     <header class="controls">
         <a href=""><span id="icon" onclick="closeGame()"><i class="fa-solid fa-arrow-right-from-bracket"></i></i></span></a>
-        <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
+        <a href=""><span id="icon"><i class="fa-solid fa-volume-high myAudio"></i></span></a>
     </header>
     <main class="logo">
         <img src="./Images/PPT ELEMENTOS-02.png" alt="">
