--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style_game.css">
+    <link rel="stylesheet" href="../style_game.css">
   </head>
 <body class="bg">
   <header>
