rectificando para pull request

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="logo">
         <img src="main-page/Images/PPT ELEMENTOS-02.png" alt="">
     </main>
-    <footer>
+    <footer class="footer">
         <article>
             <button class="button-rules-info" popovertarget="rules" popovertargetaction="toggle">
                 <img src="main-page/Images/info.svg" alt="Icon.info" id="icon" />
