--- a/main-page/index-main.html
+++ b/main-page/index-main.html
@@ -11,11 +11,11 @@
     <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body class="bg">
+<body class="bg" id="load">
     <div id="sonido"></div>
     <header class="controls">
-        <a href=""><span id="icon" onclick="closeGame()"><i class="fa-solid fa-arrow-right-from-bracket"></i></i></span></a>
-        <a href=""><span id="icon"><i class="fa-solid fa-volume-high myAudio"></i></span></a>
+        <a href=""><span id="icon" onclick="closeGame()"><i class="fa-solid fa-arrow-right-from-bracket transformed" ></i></i></span></a>
+        <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
     </header>
     <main class="logo">
         <img src="./Images/PPT ELEMENTOS-02.png" alt="">
