reemplazo de fotos de selectores

--- a/game.html
+++ b/game.html
@@ -25,12 +25,12 @@
     <main>
       <article>
         <div class="hands">
-          <img src="./game-page/img/PPT ELEMENTOS-piedra izq.png">
+          <img src="./game-page/img/PPT ELEMENTOS-piedra izq.png" class="left">
         <div class="start">
           <div class="timer"></div>
             <span  id="time" >5</span>
         </div>
-      <img src="./game-page/img/PPT ELEMENTOS-piedra der.png" >
+      <img src="./game-page/img/PPT ELEMENTOS-piedra der.png" class="rigth">
         </div>
       </article>
         <section id="selectUser" class="selectsUser">
