--- a/main-page/index-main.html
+++ b/main-page/index-main.html
@@ -11,11 +11,16 @@
     <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body class="bg" id="load">
-    <div id="sonido"></div>
+<body class="bg">
+    <audio id="music">
+        <source src="game-music-loop-3-144252.mp3" type="autoplay">
+    </audio>
     <header class="controls">
-        <button href=""><span class="controls-buttons" onclick="closeGame()"><i class="fa-solid fa-arrow-right-from-bracket transformed"></i></i></span></button>
-        <button href="" id="sound-button" onclick="soundOn()"><span class="controls-buttons button"><i class="fa-solid fa-volume-high" id="add"></i><i class="fa-solid fa-volume-off" id="remove" onclick="soundOff()"></i></span></button>
+        <button href="" class="controls-buttons"><span onclick="closeGame()"><i class="fa-solid fa-arrow-right-from-bracket transformed"></i></span></button>
+        <div class="controls">
+            <div onclick="playPause()"><i class="fa-solid fa-volume-high controls-buttons button" id="ctrlIcon"></i></div>
+            <!-- <button href="" id="playSound" class="controls-buttons button"><i class="fa-solid fa-volume-high" id="play-icon"></i><i class="fa-solid fa-volume-off" id="muteSound"></i></button> -->
+        </div>
         
     </header>
 
