--- a/resultado.html
+++ b/resultado.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="./style_game.css">
   </head>
 <body class="bg">
   <main>
@@ -20,6 +20,7 @@
         <button class="buttons reset">reiniciar</button>
         <button onclick="location.href='index2.html'" class="buttons home">home</button>
       </section>
+      <div id="effect" style="display:none"></div>
     </footer>
     <script src="src/script.js" type="module" ></script>
     <script src="src/events.js" type="module"></script>
