Temporizador + Suma en contador LISTOS

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
           <img src="./game-page/img/PPT ELEMENTOS-piedra izq.png" class="left">
         <div class="start">
           <div class="timer"></div>
-            <span  id="time" >5</span>
+            <span  id="time" class="text-style-1">5</span>
         </div>
       <img src="./game-page/img/PPT ELEMENTOS-piedra der.png" class="rigth">
         </div>
