--- a/game.html
+++ b/game.html
@@ -50,6 +50,7 @@
       </div>
       </section>
     </footer>
+      <script src="./main-page/app.js"></script>
       <script src="src/script.js" type="module" ></script>
       <script src="src/events.js" type="module"></script>
 </body>
