--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
             </form>
             <div class="play-father">
-                <button value="button" onclick="playAudio.play(); location.href='../game.html'"
-                    class="play">PLAY</button>
+                <button onclick="location.href='../game.html'" value="button" class="play">PLAY</button>
+                
             </div>
         </section>
     </footer>
