--- a/main-page/index-main.html
+++ b/main-page/index-main.html
@@ -45,7 +45,7 @@
                 <input type="text" id="searchInput" placeholder="NOMBRE DEL JUGADOR"  name="nameplayer" class="input-player">
             </form>
             <div class="play-father">
-                <button value="button" onclick="location.href='game.html'; namePlayer()" class="play">PLAY</button>
+                <button value="button" onclick="location.href='./game.html'; namePlayer()" class="play">PLAY</button>
             </div>
         </section>
     </footer>
