--- a/game.html
+++ b/game.html
@@ -25,12 +25,12 @@
     <main>
       <article>
         <div class="hands">
-          <img src="./game-page/img/PPT ELEMENTOS-piedra izq.png" class="left">
+          <div class = "leftHand"></div>
         <div class="start">
           <div class="timer"></div>
             <span  id="time" class="text-style-1">5</span>
         </div>
-      <img src="./game-page/img/PPT ELEMENTOS-piedra der.png" class="rigth">
+            <div class = "rightHand"></div>
         </div>
       </article>
         <section id="selectUser" class="selectsUser">
