corrección de detalles generales y funcionamiento

--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
       </main>	
     <footer >
       <div class="controls">
-        <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href="./index-main.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
         <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
       </div>
       <div id="effect" style="display:none"></div>
