--- a/game.html
+++ b/game.html
@@ -47,8 +47,8 @@
       </main>	
     <footer >
       <div class="controls">
-        <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
-        <a href=""><span id="icon"><i class="fa-solid fa-volume-high"></i></span></a>
+        <a href=".//index-main.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <div onclick="playPause()"><i class="fa-solid fa-volume-high controls-buttons button" id="ctrlIcon"></i></div>
       </div>
       <div id="effect" style="display:none"></div>
     </footer>
