--- a/index-main.html
+++ b/index-main.html
@@ -45,7 +45,7 @@
                 <input type="text" id="searchInput" placeholder="NOMBRE DEL JUGADOR" class="input-player">
             </form>
             <div class="play-father">
-                <button value="button" onclick="playAudio.play(); location.href='./game.html'" class="play">PLAY</button>
+                <button onclick="location.href='./game.html'" class="play">PLAY</button>
             </div>
         </div>
         
