--- a/index-main.html
+++ b/index-main.html
@@ -29,7 +29,7 @@
     </header>
 
     <main class="logo">
-        <img src="./main-page/Images/PPT ELEMENTOS-02.png" alt="">
+        <img src="./main-page/Images/PPT ELEMENTOS-02.png" alt="Logo-image">
     </main>
     <footer>
 
@@ -55,12 +55,13 @@
             <input type="text" placeholder="NOMBRE DEL JUGADOR" class="input-player">
         </form>
         <div class="play-father">
-            <button value="button" onclick="location.href='./game.html'" class="play">PLAY</button>
+            <button value="button" onclick="location.href='game.html'" class="play">PLAY</button>
         </div>
+        
         
         </div>
         </section>
     </footer>
-    <script src="./main-page/app.js"></script>
+    <script src="main-page/app.js"></script>
 </body>
 </html>
