--- a/game.html
+++ b/game.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/917f8278a9.js" crossorigin="anonymous"></script>
-        <script src="./src/script.js"></script>
-    <link rel="stylesheet" href="../style_game.css">
+    <link rel="stylesheet" href="./style_game.css">
   </head>
 <body class="bg">
   <header>
@@ -47,13 +46,13 @@
       </main>	
     <footer >
       <div class="controls">
-        <a href=".//index-main.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href="./index-main.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
         <div onclick="playPause()"><i class="fa-solid fa-volume-high controls-buttons button" id="ctrlIcon"></i></div>
       </div>
       <div id="effect" style="display:none"></div>
     </footer>
-      <script src="./app.js"></script>
-      <script src="src/script.js" type="module" ></script>
-      <script src="src/events.js" type="module"></script>
+      <script src="./main-page/app.js"></script>
+      <script src="./src/script.js" type="module" ></script>
+      <script src="./src/events.js" type="module"></script>
 </body>
 </html>
