--- a/game.html
+++ b/game.html
@@ -46,8 +46,7 @@
       </main>	
     <footer >
       <div class="controls">
-        <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
-        <div onclick="playPause()"><i class="fa-solid fa-volume-high controls-buttons button" id="ctrlIcon"></i></div>
+        <a href="index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
       </div>
       <div id="effect" style="display:none"></div>
     </footer>
