borrar cosas innecesarias

--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
       </main>	
     <footer >
       <div class="controls">
-        <a href="index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
+        <a href="./index.html"><span id="icon"><i class="fa-solid fa-xmark"></i></span></a>
       </div>
       <div id="effect" style="display:none"></div>
     </footer>
