solucionar alt de img

--- a/game.html
+++ b/game.html
@@ -40,7 +40,7 @@
             <img src="./game-page/img/Boton_papel.png"alt="Papel">
           </button>
           <button id="2" value="2" class="selector">
-            <img src="./game-page/img/Boton_tijera.png">
+            <img src="./game-page/img/Boton_tijera.png"alt="Tijera">
           </button>
         </section>
       </main>	
