--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <main class="logo">
-        <img src="./main-page/Images/PPT ELEMENTOS-02.png" alt="">
+        <img src="./main-page/Images/PPT ELEMENTOS-02.png" alt="logo">
     </main>
     <footer>
         <button class="button-rules-info" popovertarget="rules" popovertargetaction="toggle">
